Bug 177764 - crash when type something in private chat, opened from jabber conference
Summary: crash when type something in private chat, opened from jabber conference
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Jabber Plugin (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
: 188654 203998 (view as bug list)
Depends on:
Blocks:
 
Reported: 2008-12-14 13:06 UTC by Sergey
Modified: 2009-12-27 23:53 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sergey 2008-12-14 13:06:12 UTC
Version:           kopete-0.60.81 kde-4.1.82 (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

step to reproduce
1. join groupchat(conference)
2. click right mouse button on some nick 
3. select start chat
4. when chat open press any key
5. kopete crashed

backtrace

(no debugging symbols found)
(no debugging symbols found)
(no debugging symbols found)
0x00007fe760ae5ca1 in nanosleep () from /lib/libc.so.6
[Current thread is 0 (LWP 13922)]

Thread 3 (Thread 0x41bd0950 (LWP 13931)):
#0  0x00007fe76230fcb0 in __pthread_mutex_unlock_usercnt () from /lib/libpthread.so.0
#1  0x00007fe75e6d34b0 in g_main_context_acquire () from /usr/lib/libglib-2.0.so.0
#2  0x00007fe75e6d64ad in ?? () from /usr/lib/libglib-2.0.so.0
#3  0x00007fe75e6d6d0f in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#4  0x00007fe7626b9d90 in QEventDispatcherGlib::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#5  0x00007fe76268dac4 in QEventLoop::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#6  0x00007fe76268dede in QEventLoop::exec () from /usr/lib64/qt4/libQtCore.so.4
#7  0x00007fe75374b439 in QCA::SyncThread::run () from /usr/lib64/qca2/libqca.so.2
#8  0x00007fe762581d24 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#9  0x00007fe76230d017 in start_thread () from /lib/libpthread.so.0
#10 0x00007fe760b15fdd in clone () from /lib/libc.so.6
#11 0x0000000000000000 in ?? ()

Thread 2 (Thread 0x413cf950 (LWP 13932)):
#0  0x00007fe762310d89 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/libpthread.so.0
#1  0x00007fe762582cd6 in QWaitCondition::wait () from /usr/lib64/qt4/libQtCore.so.4
#2  0x00007fe7639377c0 in ?? () from /usr/lib64/qt4/libQtNetwork.so.4
#3  0x00007fe762581d24 in ?? () from /usr/lib64/qt4/libQtCore.so.4
#4  0x00007fe76230d017 in start_thread () from /lib/libpthread.so.0
#5  0x00007fe760b15fdd in clone () from /lib/libc.so.6
#6  0x0000000000000000 in ?? ()

Thread 1 (Thread 0x7fe76798c750 (LWP 13922)):
#0  0x00007fe760ae5ca1 in nanosleep () from /lib/libc.so.6
#1  0x00007fe760ae5ac7 in sleep () from /lib/libc.so.6
#2  0x00007fe7632e5c0f in ?? () from /usr/kde/4.2/lib64/libkdeui.so.5
#3  0x00007fe7632e629f in KCrash::defaultCrashHandler () from /usr/kde/4.2/lib64/libkdeui.so.5
#4  <signal handler called>
#5  0x00007fe753a31f94 in ?? () from /usr/kde/4.2/lib64/kde4/kopete_jabber.so
#6  0x00007fe753a72692 in ?? () from /usr/kde/4.2/lib64/kde4/kopete_jabber.so
#7  0x00007fe753a84678 in ?? () from /usr/kde/4.2/lib64/kde4/kopete_jabber.so
#8  0x00007fe753a84830 in ?? () from /usr/kde/4.2/lib64/kde4/kopete_jabber.so
#9  0x00007fe753a84c51 in ?? () from /usr/kde/4.2/lib64/kde4/kopete_jabber.so
#10 0x00007fe7626a4f5f in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#11 0x00007fe7666a4b88 in Kopete::ChatSession::myselfTyping () from /usr/kde/4.2/lib64/libkopete.so.4
#12 0x00007fe7666a5fe4 in Kopete::ChatSession::qt_metacall () from /usr/kde/4.2/lib64/libkopete.so.4
#13 0x00007fe753a84bdf in ?? () from /usr/kde/4.2/lib64/kde4/kopete_jabber.so
#14 0x00007fe7626a4f5f in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00007fe754e8e772 in ChatTextEditPart::typing () from /usr/kde/4.2/lib64/libkopetechatwindow_shared.so.1
#16 0x00007fe754e8f01b in ChatTextEditPart::slotTextChanged () from /usr/kde/4.2/lib64/libkopetechatwindow_shared.so.1
#17 0x00007fe754e8f83a in ChatTextEditPart::qt_metacall () from /usr/kde/4.2/lib64/libkopetechatwindow_shared.so.1
#18 0x00007fe7626a4f5f in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#19 0x00007fe761acc705 in QTextEdit::qt_metacall () from /usr/lib64/qt4/libQtGui.so.4
#20 0x00007fe76336edf1 in KTextEdit::qt_metacall () from /usr/kde/4.2/lib64/libkdeui.so.5
#21 0x00007fe7626a4f5f in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#22 0x00007fe7618cc3bd in QTextControl::qt_metacall () from /usr/lib64/qt4/libQtGui.so.4
#23 0x00007fe7626a4f5f in QMetaObject::activate () from /usr/lib64/qt4/libQtCore.so.4
#24 0x00007fe761905dac in ?? () from /usr/lib64/qt4/libQtGui.so.4
#25 0x00007fe76192fa11 in QTextCursor::insertText () from /usr/lib64/qt4/libQtGui.so.4
#26 0x00007fe76192fc40 in QTextCursor::insertText () from /usr/lib64/qt4/libQtGui.so.4
#27 0x00007fe7618cd52b in ?? () from /usr/lib64/qt4/libQtGui.so.4
#28 0x00007fe7618d09a6 in QTextControl::processEvent () from /usr/lib64/qt4/libQtGui.so.4
#29 0x00007fe7618c6107 in QTextControl::processEvent () from /usr/lib64/qt4/libQtGui.so.4
#30 0x00007fe761acdd99 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#31 0x00007fe761acd826 in QTextEdit::keyPressEvent () from /usr/lib64/qt4/libQtGui.so.4
#32 0x00007fe761723b28 in QWidget::event () from /usr/lib64/qt4/libQtGui.so.4
#33 0x00007fe761ae2f61 in QAbstractScrollArea::event () from /usr/lib64/qt4/libQtGui.so.4
#34 0x00007fe761acd9ae in QTextEdit::event () from /usr/lib64/qt4/libQtGui.so.4
#35 0x00007fe754e934c6 in ?? () from /usr/kde/4.2/lib64/libkopetechatwindow_shared.so.1
#36 0x00007fe7616ca135 in QApplicationPrivate::notify_helper () from /usr/lib64/qt4/libQtGui.so.4
#37 0x00007fe7616cc485 in QApplication::notify () from /usr/lib64/qt4/libQtGui.so.4
#38 0x00007fe76327c918 in KApplication::notify () from /usr/kde/4.2/lib64/libkdeui.so.5
#39 0x00007fe76268eb7f in QCoreApplication::notifyInternal () from /usr/lib64/qt4/libQtCore.so.4
#40 0x00007fe76175f678 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#41 0x00007fe761761759 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#42 0x00007fe76173cb9b in QApplication::x11ProcessEvent () from /usr/lib64/qt4/libQtGui.so.4
#43 0x00007fe7617631dd in ?? () from /usr/lib64/qt4/libQtGui.so.4
#44 0x00007fe75e6d4ecb in ?? () from /usr/lib/libglib-2.0.so.0
#45 0x00007fe75e6d6a85 in ?? () from /usr/lib/libglib-2.0.so.0
#46 0x00007fe75e6d6d0f in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#47 0x00007fe7626b9d79 in QEventDispatcherGlib::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#48 0x00007fe761762966 in ?? () from /usr/lib64/qt4/libQtGui.so.4
#49 0x00007fe76268dac4 in QEventLoop::processEvents () from /usr/lib64/qt4/libQtCore.so.4
#50 0x00007fe76268dede in QEventLoop::exec () from /usr/lib64/qt4/libQtCore.so.4
#51 0x00007fe762692127 in QCoreApplication::exec () from /usr/lib64/qt4/libQtCore.so.4
#52 0x00000000004426f1 in ?? ()
#53 0x00007fe760a64486 in __libc_start_main () from /lib/libc.so.6
#54 0x00000000004246f9 in _start ()
#0  0x00007fe760ae5ca1 in nanosleep () from /lib/libc.so.6

in console

Tkopete(13922)/kopete (jabber) JabberResource::slotGetDiscoCapabilties: Requesting Client Features for  "cyberindustrial@conference.jabber.ru/Magistr"
kopete(13922)/kopete (jabber - raw protocol) JabberAccount::slotClientDebugMessage: "XML OUT: <iq type="get" to="cyberindustrial@conference.jabber.ru/Magistr" id="aacaa" >
<query xmlns="http://jabber.org/protocol/disco#info"/>
</iq>
"
kopete(13922)/kopete (jabber) JabberChatSession::slotSendTypingNotification: Sending out typing notification ( true ) to all chat members.
KCrash: Application 'kopete' crashing...
sock_file=/home/mag/.kde4.2/socket-u4/kdeinit4__0
Comment 1 Roman Jarosz 2009-12-27 17:37:04 UTC
*** Bug 188654 has been marked as a duplicate of this bug. ***
Comment 2 Roman Jarosz 2009-12-27 18:01:23 UTC
*** Bug 203998 has been marked as a duplicate of this bug. ***
Comment 3 Roman Jarosz 2009-12-27 23:53:50 UTC
SVN commit 1066799 by rjarosz:

Fix crashes in private chat, opened from jabber conference.

BUG: 177764



 M  +4 -0      jabberaccount.cpp  
 M  +4 -0      jabberbasecontact.h  
 M  +3 -3      jabberchatsession.cpp  
 M  +2 -2      jabbercontact.h  
 M  +3 -0      jabbergroupcontact.cpp  
 M  +103 -4    jabbergroupmembercontact.cpp  
 M  +10 -0     jabbergroupmembercontact.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1066799