Fix crashes in private chat, opened from jabber conference.

BUG: 177764


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1066799