protocols/jabber/jabberbasecontact.h
@@ -152,6 +152,10 @@ public:
 	 */
 	bool sendsDeliveredEvent() const { return mSendsDeliveredEvent; }
 
+	virtual bool isContactRequestingEvent( XMPP::MsgEvent /*event*/ ) { return false; }
+	
+	virtual QString lastReceivedMessageId () const { return QString(); }
+
 public slots:
 
 	/**
